// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ContentArea /> renders correctly with custom props 1`] = `
<div
  className="mfui-content-area mfui-content-area_color_white"
>
  <div
    className="mfui-content-area__inner mfui-content-area__inner_padding_none mfui-content-area__inner_color_white"
  >
    <span>
      child
    </span>
  </div>
</div>
`;

exports[`<ContentArea /> renders correctly with default props 1`] = `
<div
  className="mfui-content-area mfui-content-area_color_transparent"
>
  <div
    className="mfui-content-area__inner mfui-content-area__inner_padding_lg mfui-content-area__inner_color_transparent"
  >
    <span>
      child
    </span>
  </div>
</div>
`;
